<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/saveProfileButton"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/customCheckBox"
                android:text="@string/giving_custom_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

<!--            Figyeljek erre, mert ez is itt van csak rejtve-->
            <TextView
                android:id="@+id/defaultCalculationInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_calc_default_values"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/customCalculationInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_calc_custom_values" />

            <TextView
                android:id="@+id/sexTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/sexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:tag="male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:tag="female" />
            </RadioGroup>

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:minHeight="48dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_cm"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_kg"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/goalTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/goalGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/loseRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lose_weight"
                    android:tag="lose_weight" />

                <RadioButton
                    android:id="@+id/maintainRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maintain_weight"
                    android:tag="maintain_weight" />

                <RadioButton
                    android:id="@+id/gainRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gain_weight"
                    android:tag="gain_weight" />
            </RadioGroup>

            <TextView
                android:id="@+id/activityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_level"
                android:layout_marginTop="8dp"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/activitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:onClick="saveProfile"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:onClick="deleteUser"
        android:text="@string/delete_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        android:backgroundTint="#FF0000" />

</androidx.constraintlayout.widget.ConstraintLayout>
